--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,15 +1,45 @@
 html {
   color: #191919;
+  min-width: 350px;
 }
 
 body {
-  min-width: 350px;
+  min-width: 400px;
   min-height: 100%;
   background-color: #f1f1f1;
 }
 
 #root {
   height: 100%;
+}
+
+.header {
+  padding: 0;
+  min-width: 350px;
+  margin-bottom: 1em;
+}
+
+.filters {
+  max-width: 1510px;
+  margin: 0 auto;
+  padding: 1em;
+}
+.filters .personagens {
+  display: none;
+}
+.filters .container {
+  margin: 0 1em;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
+
+.pagination {
+  color: rgba(0, 0, 0, 0.54);
+}
+.pagination .navigate {
+  flex-shrink: 0;
+  margin-left: 1.7em;
 }
 
 .catalog {
@@ -23,7 +53,7 @@ body {
   justify-content: center;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: stretch;
 }
 .catalog .card {
   max-width: 345px;
@@ -97,6 +127,21 @@ body {
 }
 .comic .hidesmall {
   display: none;
+}
+.comic .navigation {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+}
+.comic .navigation a {
+  margin: 1em;
+  margin-top: 0;
+}
+@media (min-width: 900px) and (max-width: 1250px) {
+  .comic .navigation a {
+    margin-right: 1.8em;
+  }
 }
 @media (min-width: 900px) {
   .comic .container {
