--- a/src/sass/catalog.scss
+++ b/src/sass/catalog.scss
@@ -1,10 +1,11 @@
 // index.css
 html {
   color: #191919;
+  min-width: 350px;
 }
 
 body {
-  min-width: 350px;
+  min-width: 400px;
   min-height: 100%;
   background-color: #f1f1f1;
 }
@@ -12,6 +13,44 @@ body {
 #root {
   height: 100%;
 }
+
+// header
+.header {
+  padding: 0;
+  min-width: 350px;
+  
+  margin-bottom: 1em;
+}
+
+// filters
+.filters {
+  max-width: 1510px;
+  margin: 0 auto;
+  padding: 1em;
+  
+  .personagens {
+    display: none;
+  }
+
+  .container {
+    margin: 0 1em;
+    display: flex;
+    justify-content: flex-end;
+    //justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+}
+
+// pagination
+.pagination {
+  color: rgba(0, 0, 0, 0.54);
+  .navigate {
+
+    flex-shrink: 0;
+    margin-left: 1.7em;
+  }
+}
+
 
 // catalog.css
 .catalog {
@@ -26,7 +65,7 @@ body {
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: stretch;
   }
   
   .card {
@@ -120,6 +159,22 @@ body {
 
   .hidesmall {
     display: none;
+  }
+
+  .navigation {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+
+    a {
+      margin: 1em;
+      margin-top: 0;
+
+      @media (min-width: 900px) and (max-width: 1250px) {
+        margin-right: 1.8em;
+      }
+    }
   }
 
   @media (min-width: 900px) {
