--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -18,23 +18,47 @@ body {
   min-width: 350px;
   margin-bottom: 1em;
 }
+.header a {
+  color: white;
+  text-decoration: none;
+}
 
 .filters {
   max-width: 1510px;
   margin: 0 auto;
   padding: 1em;
+  display: flex;
+  justify-content: flex-end;
 }
 .filters .personagens {
   display: none;
 }
 .filters .container {
+  justify-content: space-around;
+  width: 100%;
   margin: 0 1em;
   display: flex;
-  justify-content: flex-end;
   flex-wrap: wrap;
+}
+@media (min-width: 600px) {
+  .filters .container {
+    width: 65%;
+  }
+}
+@media (min-width: 900px) {
+  .filters .container {
+    justify-content: space-between;
+    width: 50%;
+  }
+}
+@media (min-width: 1250px) {
+  .filters .container {
+    width: 30%;
+  }
 }
 
 .pagination {
+  min-width: 350px;
   color: rgba(0, 0, 0, 0.54);
 }
 .pagination .navigate {
@@ -196,6 +220,9 @@ body {
   .comic img {
     margin: 1em;
   }
+}
+.comic .hide {
+  display: none;
 }
 
 #footer {
