--- a/src/sass/catalog.scss
+++ b/src/sass/catalog.scss
@@ -20,6 +20,11 @@ body {
   min-width: 350px;
   
   margin-bottom: 1em;
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
 
 // filters
@@ -28,24 +33,47 @@ body {
   margin: 0 auto;
   padding: 1em;
   
+  display: flex; //
+  justify-content: flex-end; //
+
   .personagens {
     display: none;
   }
 
   .container {
+    justify-content: space-around; //
+    width: 100%; //
     margin: 0 1em;
     display: flex;
-    justify-content: flex-end;
     //justify-content: space-evenly;
     flex-wrap: wrap;
+  }
+  
+  @media (min-width: 600px) {
+    .container {
+      width: 65%; //
+    }
+  }
+  
+  @media (min-width: 900px) {
+    .container {
+      justify-content: space-between; //
+      width: 50%; //
+    }
+  }
+  
+  @media (min-width: 1250px) {
+    .container {
+      width: 30%; //
+    }
   }
 }
 
 // pagination
 .pagination {
+  min-width: 350px;
   color: rgba(0, 0, 0, 0.54);
   .navigate {
-
     flex-shrink: 0;
     margin-left: 1.7em;
   }
@@ -243,6 +271,10 @@ body {
     img {
       margin: 1em;
     }
+  }
+
+  .hide {
+    display: none;
   }
 }
 
